[package]
name = "vulkano_maybe_molten"
version = "0.30.0"
description = "Use vulkano-rs with ash-molten on macOS and without on other platforms"
license = "MIT OR Apache-2.0"
keywords = ["vulkan", "vulkano", "macOS", "metal", "moltenVK"]
readme = "README.md"
repository = "https://github.com/apertus-open-source-cinema/vulkano-maybe-molten/"
authors = ["Jaro Habiger <jarohabiger@googlemail.com>"]

edition = "2021"

[dependencies]
vulkano = "0.30.0"

[target.'cfg(target_os = "macos")'.dependencies]
ash-molten = { version = "=0.13.0", features = ["pre-built"] }
ash_molten_version = {package = "ash", version = "0.35.2"}
ash_vulkano_version = {package = "ash", version = "0.37.0"}
